--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- 
+    <label id="color_theme" class="switch">
+        <input type="checkbox">
+        <span class="slider round"></span>
+      </label>
     <script src="index.js"></script>
 </body>
 </html>
